fix consumption setting icon on dark mode

--- a/www/index.html
+++ b/www/index.html
@@ -170,7 +170,7 @@
                     <!-- Charging information  -->
                     <ul class="charging-info-list mdl-list">
                         <label class="mdl-button--icon consumption-settings-icon">
-                            <img class="material-icons" src="./icons/settings.svg" onclick="consumption()"></img>
+                            <img class="material-icons" src="./icons/settings.svg" onclick="consumption()" id="consumption_settings_icon"></img>
                         </label>
                         <li class="mdl-list__item">
                             <span class="mdl-list__item-primary-content">
