default sync mode; directly call sync request on change; improve stability of sync

--- a/www/index.html
+++ b/www/index.html
@@ -97,7 +97,10 @@
             } else showMessage(translate('MISSING_CONFIGURATION', lng));
 
             // start sync
-            if(config.autoSync) startSync(config.autoSync);
+            // if(config.autoSync) startSync(config.autoSync);
+
+            // start (default) sync
+            toggleAutoSyncMode(getValue('syncMode'));
         }
         </script>
     </head>
