--- a/www/settings.html
+++ b/www/settings.html
@@ -103,6 +103,9 @@
                     <span class="mdl-layout-title translate" id="HEADER_SETTINGS" style="position: absolute; top: 16px"></span>
                     <!-- Add spacer, to align navigation to the right -->
                     <div class="mdl-layout-spacer"></div>
+                    <label class="mdl-button mdl-js-button mdl-button--icon" style="position: absolute; top: 12px; right: 80px">
+                        <img class="material-icons" onclick="deviceSettings()" src="./icons/device_settings.svg"></img>
+                    </label>
                     <label class="mdl-button mdl-js-button mdl-button--icon" style="position: absolute; top: 12px; right: 48px">
                         <img class="material-icons" onclick="switchAccount(getValue('lng', 'en'))" src="./icons/account.svg"></img>
                     </label>
