--- a/www/index.html
+++ b/www/index.html
@@ -62,8 +62,8 @@
             document.addEventListener("deviceready", onDeviceReady, false);
             // translate the page
             translatePage(getValue('lng', 'en'));
-            // show own risk message if user not prompted so far
-            if(!getValue('ownRiskAccepted')) ownRisk();
+            // show own risk message if setup was completed
+            if(getValue('setupCompleted')) ownRisk();
         }
 
         /**
