add daily summary; update to v.1.2.2

--- a/www/settings.html
+++ b/www/settings.html
@@ -171,6 +171,11 @@
                             <input type="checkbox" id="push" disabled="true" class="mdl-checkbox__input">
                             <span class="mdl-checkbox__label translate" id="PUSH_NOTIFICATION"></span>
                         </label>
+                        <!-- Daily summary -->
+                        <label id="summaryLabel" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect marginLeft" for="summary">
+                            <input type="checkbox" id="summary" class="mdl-checkbox__input">
+                            <span class="mdl-checkbox__label translate" id="DAILY_SUMMARY"></span>
+                        </label>
                         <!-- Telegram -->
                         <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect marginLeft" for="telegram" id="telegramCheckbox">
                             <input type="checkbox" id="telegram" disabled="true" class="mdl-checkbox__input">
