implementation of babel to add es6 support as well as polyfills

--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,8 @@
     <div id="app"></div>
     <!-- Client configuration variables -->
     <script type="text/javascript" src="client.js"></script>
+    <!-- Polyfills -->
+    <script type="text/javascript" src="js/external/polyfill.min.js"></script>
     <!-- Chart.js -->
     <script type="text/javascript" src="js/external/Chart.min.js"></script>
     <!-- VueJS -->
