first implementation and draft of dashboard page

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/external/vue-material-icons.min.css">
     <link rel="stylesheet" href="css/evnotify.css">
     <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/dashboard.css">
 </head>
 
 <body>
