integration of slide functionality within dashboard

--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/external/vue-material.min.css">
     <link rel="stylesheet" href="css/external/vue-material-theme-default.min.css">
     <link rel="stylesheet" href="css/external/vue-material-icons.min.css">
+    <link rel="stylesheet" href="css/external/vueperslides.min.css">
     <link rel="stylesheet" href="css/evnotify.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/dashboard.css">
@@ -30,6 +31,8 @@
     <script type="text/javascript" src="js/external/vue-material.min.js"></script>
     <!-- Vue router -->
     <script type="text/javascript" src="js/external/vue-router.min.js"></script>
+    <!-- Vueper Slides -->
+    <script type="text/javascript" src="js/external/vueperslides.min.js"></script>
     <!-- compiled bundle file -->
     <script type="text/javascript" src="js/bundle.js"></script>
     <!-- Cordova -->
