preparation + first implementation of logs; add vuetify

--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EVNotify</title>
     <!-- CSS files have to be added here -->
+    <link rel="stylesheet" href="css/external/vuetify.min.css">
     <link rel="stylesheet" href="css/external/vue-material.min.css">
     <link rel="stylesheet" href="css/external/vue-material-theme-default.min.css">
     <link rel="stylesheet" href="css/external/vue-material-icons.min.css">
@@ -27,6 +28,8 @@
     <script type="text/javascript" src="js/external/Chart.min.js"></script>
     <!-- VueJS -->
     <script type="text/javascript" src="js/external/vue.min.js"></script>
+    <!-- Vuetify -->
+    <script type="text/javascript" src="js/external/vuetify.min.js"></script>
     <!-- Vue Material -->
     <script type="text/javascript" src="js/external/vue-material.min.js"></script>
     <!-- Vue router -->
