very fist basic structure of logs; tmp vuetify for own bugfix

--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,8 @@
     <!-- VueJS -->
     <script type="text/javascript" src="js/external/vue.min.js"></script>
     <!-- Vuetify -->
-    <script type="text/javascript" src="js/external/vuetify.min.js"></script>
+    <!-- <script type="text/javascript" src="js/external/vuetify.min.js"></script> -->
+    <script src="js/external/vuetify-v1.2.6.js"></script>
     <!-- Vue Material -->
     <script type="text/javascript" src="js/external/vue-material.min.js"></script>
     <!-- Vue router -->
