--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,8 @@
     <script type="text/javascript" src="js/external/vue-router.min.js"></script>
     <!-- Vueper Slides -->
     <script type="text/javascript" src="js/external/vueperslides.min.js"></script>
+    <!-- QR Code -->
+    <script type="text/javascript" src="js/external/qrcode.min.js"></script>
     <!-- compiled bundle file -->
     <script type="text/javascript" src="js/bundle.js"></script>
     <!-- Cordova -->
