first implementation of app tour - login page tour added

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/external/vue-material-theme-default.min.css">
     <link rel="stylesheet" href="css/external/vue-material-icons.min.css">
     <link rel="stylesheet" href="css/external/vueperslides.min.css">
+    <link rel="stylesheet" href="css/external/vue-tour.min.css">
     <link rel="stylesheet" href="css/evnotify.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/dashboard.css">
@@ -37,6 +38,8 @@
     <script type="text/javascript" src="js/external/vue-router.min.js"></script>
     <!-- Vueper Slides -->
     <script type="text/javascript" src="js/external/vueperslides.min.js"></script>
+    <!-- Vue Tour -->
+    <script type="text/javascript" src="js/external/vue-tour.min.js"></script>
     <!-- QR Code -->
     <script type="text/javascript" src="js/external/qrcode.min.js"></script>
     <!-- compiled bundle file -->
