--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/external/vue-material-icons.min.css">
     <link rel="stylesheet" href="css/external/vueperslides.min.css">
     <link rel="stylesheet" href="css/external/vue-tour.min.css">
+    <link rel="stylesheet" href="css/external/leaflet.css">
     <link rel="stylesheet" href="css/evnotify.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/dashboard.css">
@@ -40,6 +41,8 @@
     <script type="text/javascript" src="js/external/vueperslides.min.js"></script>
     <!-- Vue Tour -->
     <script type="text/javascript" src="js/external/vue-tour.min.js"></script>
+    <!-- Leaflet -->
+    <script src="js/external/leaflet.js"></script>
     <!-- QR Code -->
     <script type="text/javascript" src="js/external/qrcode.min.js"></script>
     <!-- compiled bundle file -->
