textdecoder polyfill to support old android 4 devices

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,8 @@
     <script type="text/javascript" src="client.js"></script>
     <!-- Polyfills -->
     <script type="text/javascript" src="js/external/polyfill.min.js"></script>
+    <script type="text/javascript" src="js/external/encoding-indexes.min.js"></script>
+    <script type="text/javascript" src="js/external/encoding.min.js"></script>
     <!-- Chart.js -->
     <script type="text/javascript" src="js/external/Chart.min.js"></script>
     <!-- VueJS -->
