--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height, viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>EVNotify</title>
     <!-- CSS files have to be added here -->
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/evnotify.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/iphone.css">
 </head>
 
 <body>
